fix (about): overflow hidden

--- a/src/app/pages/about/about.component.scss
+++ b/src/app/pages/about/about.component.scss
@@ -58,8 +58,7 @@
 
     padding: 0 0 0 7vw;
 
-    overflow-x: auto;
-    overflow-y: hidden;
+    overflow: hidden;
 
     .logo-wrapper {
       height: 100vh;
